# template_lib

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
_github/actions/setup-env/: action.yml
_github/actions/setup-vcpkg/: action.yml
_github/scripts/: extract_vcpkg_version.py  generate_port_files.py  merge_vcpkg_config.py
_github/workflows/: build-test.yml  ci.yml  cmake-build.yml  publish.yml  release-tag.yml  setup-env.yml
cmake/: {{project_name_underscore}}.pc.in  {{project_name_underscore}}Config.cmake.in
docs/: cmake-preset-architecture.md
include/: {{project_name_underscore}}.h
scripts/: install-hooks.sh  pre-push-hook.sh
src/: main.cpp  {{project_name_underscore}}.cpp
tests/: test_downstream.sh
tests/downstream/: CMakeLists.txt  main.cpp  vcpkg.json
tests/unit/: CMakeLists.txt  test_{{project_name_underscore}}.cpp
